--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "axios": "^1.7.5",
     "formik": "^2.4.6",
-    "next": "14.2.7",
+    "next": "^14.2.7",
     "react": "^18",
     "react-dom": "^18",
     "react-query": "^3.39.3",
@@ -22,10 +22,11 @@
     "redux-thunk": "^3.1.0",
     "sweetalert": "^2.1.2",
     "web-vitals": "^4.2.3",
+    "yarn": "^1.22.22",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.16.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
